Changed FindEndPoint to return the contents of a loaded file via file.load() instead of calling readFile() directly.